--- a/MapoTero_v3/MapoTero_v3.vbproj
+++ b/MapoTero_v3/MapoTero_v3.vbproj
@@ -234,6 +234,8 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+    <Content Include="GMap.NET.Core.dll" />
+    <Content Include="GMap.NET.WindowsForms.dll" />
     <Content Include="skrypty\o_programie_NoToCONS.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
