--- a/MapoTero_v3/MapoTero_v3.vbproj
+++ b/MapoTero_v3/MapoTero_v3.vbproj
@@ -229,6 +229,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\marker_ico.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="warstwy\administracyjna.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -375,9 +378,9 @@
     <Content Include="skrypty\SynGdiPlus\Synopse.inc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <None Include="Resources\MapoTero.jpg">
+    <Content Include="Resources\MapoTero.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.1">
