--- a/MapoTero_v3/MapoTero_v3.vbproj
+++ b/MapoTero_v3/MapoTero_v3.vbproj
@@ -172,9 +172,7 @@
     <Compile Include="Instrukcja_obslugi.Designer.vb">
       <DependentUpon>Instrukcja_obslugi.vb</DependentUpon>
     </Compile>
-    <Compile Include="Instrukcja_obslugi.vb">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Instrukcja_obslugi.vb" />
     <Compile Include="Module1.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
@@ -230,6 +228,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\marker_ico.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\siatka.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="skrypty\readme.txt">
@@ -373,9 +374,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\kosz.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\siatka.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="skrypty\SynGdiPlus\SynGdiPlus.dcu">
